--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
   font-size: 4.5rem;
 }
 .info p {
+  width: 400px;
   margin-top: 10px;
   font-size: 1.5rem;
   color: var(--DarkGrayishMagenta);
@@ -181,4 +182,46 @@ body {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media screen and (max-width: 768px) {
+  .main__container {
+    flex-direction: column;
+  }
+  .info h1 {
+    font-size: 3rem;
+    text-align: center;
+  }
+  .info p {
+    width: 95%;
+    text-align: center;
+    font-size: 1.5rem;
+    margin: 30px auto 0;
+  }
+  .rating {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .rating__user {
+    flex-direction: column;
+    width: 100%;
+    align-self: center;
+    gap: 10px;
+  }
+
+  .rating__user p {
+    margin-right: 0;
+  }
+
+  .card__container {
+    margin-top: 50px;
+    gap: 10px;
+  }
+  .card:nth-child(2) {
+    margin: 0;
+  }
+  .card:nth-child(3) {
+    margin: 0;
+  }
 }
