--- a/style.css
+++ b/style.css
@@ -185,6 +185,9 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+  .main {
+    width: 90%;
+  }
   .main__container {
     flex-direction: column;
   }
